--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="copy-container">
         <h1>HALO SEMUA<span>!</span></h1>
         <h2>MEL's PORTFOLIO</h2>
-        <img src="images/Ninja Ken.png" alt="Ninaj Ken">
+        <img src="Ninja Ken.png" alt="Ninaj Ken">
       </div>
       
       <div class="about">
@@ -36,15 +36,15 @@
         <h3><a id="wish-link">Peliharaan yang aku mau : </a></h3>
         <br>
         <div class="contents-item">
-          <img src="images/samoyed.jpg">
+          <img src="samoyed.jpg">
           <p>Samoyed</p>
         </div>
         <div class="contents-item">
-          <img src="images/bristish.jpg">
+          <img src="bristish.jpg">
           <p>British Short Hair</p>
         </div>
         <div class="contents-item">
-          <img src="images/pug.jpg">
+          <img src="pug.jpg">
           <p>Pug</p>
         </div>
         
